add redis and otp validation

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_NAME=boilerplate
 DB_USER=postgres
 DB_HOST=db
 DB_PASSWORD=password
+JWT_TOKEN=eMEzkBpNtAGdjOwL_n072Hbg5Yp-KabNrfXxDwrNxJA=
+REDIS_ADDR=redis:6379
+REDIS_DB=0
