add API for refresh token

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DB_PASSWORD=password
 JWT_TOKEN=eMEzkBpNtAGdjOwL_n072Hbg5Yp-KabNrfXxDwrNxJA=
 REDIS_ADDR=redis:6379
 REDIS_DB=0
+ACCESS_TOKEN_EXPIRY=3600
+REFRESH_TOKEN_EXPIRY=86400
