add SQS integration

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,5 @@ REDIS_ADDR=redis:6379
 REDIS_DB=0
 ACCESS_TOKEN_EXPIRY=3600
 REFRESH_TOKEN_EXPIRY=86400
+SQS_REGION=ap-south-1
+AWS_SHARED_CREDENTIALS_FILE=/app/aws_creds
