option to add queueing system or not

--- a/.env.sample
+++ b/.env.sample
@@ -9,4 +9,5 @@ REDIS_DB=0
 ACCESS_TOKEN_EXPIRY=3600
 REFRESH_TOKEN_EXPIRY=86400
 SQS_REGION=ap-south-1
+SHOULD_USE_QUEUEING_SYSTEM=false
 AWS_SHARED_CREDENTIALS_FILE=/app/aws_creds
