add machinery setup

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,4 @@ REFRESH_TOKEN_EXPIRY=86400
 SQS_REGION=ap-south-1
 SHOULD_USE_QUEUEING_SYSTEM=false
 AWS_SHARED_CREDENTIALS_FILE=/app/aws_creds
+IS_APP_SERVER=true
