--- a/.env.sample
+++ b/.env.sample
@@ -6,9 +6,14 @@ DB_PASSWORD=password
 JWT_TOKEN=token
 REDIS_ADDR=redis:6379
 REDIS_DB=0
+BROKER_BACKEND=redis://redis:6379
+BROKER_RESULT_BACKEND=redis://redis:6379
 ACCESS_TOKEN_EXPIRY=3600
 REFRESH_TOKEN_EXPIRY=86400
 SQS_REGION=ap-south-1
-SHOULD_USE_QUEUEING_SYSTEM=false
 AWS_SHARED_CREDENTIALS_FILE=/app/aws_creds
 IS_APP_SERVER=true
+ENV=dev
+AWS_ACCESS_KEY=abcd
+AWS_SECRET_ACCESS_KEY=abcd
+SQS_URL=https://sqs.ap-south-1.amazonaws.com/1234567890
