run cron on a different container

--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@ ACCESS_TOKEN_EXPIRY=3600
 REFRESH_TOKEN_EXPIRY=86400
 SQS_REGION=ap-south-1
 AWS_SHARED_CREDENTIALS_FILE=/app/aws_creds
-IS_APP_SERVER=true
+APP_TYPE=server
 ENV=dev
 AWS_ACCESS_KEY=abcd
 AWS_SECRET_ACCESS_KEY=abcd
