--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     restart: always
     env_file: *envfile
     environment:
-      - IS_APP_SERVER=false
+      - APP_TYPE=worker
       - QUEUE_NAME=prod-send-otp
     command:
       [
@@ -66,7 +66,7 @@ services:
     networks:
       - default
 
-  worker-send-email:
+  cron:
     build:
       context: .
       dockerfile: worker.Dockerfile
@@ -75,8 +75,7 @@ services:
     restart: always
     env_file: *envfile
     environment:
-      - IS_APP_SERVER=false
-      - QUEUE_NAME=prod-send-email
+      - APP_TYPE=cron
     command:
       [
         "go",
@@ -90,3 +89,28 @@ services:
       - db
     networks:
       - default
+
+  # worker-send-email:
+  #   build:
+  #     context: .
+  #     dockerfile: worker.Dockerfile
+  #   image: *app
+  #   platform: linux/amd64
+  #   restart: always
+  #   env_file: *envfile
+  #   environment:
+  #     - IS_APP_SERVER=false
+  #     - QUEUE_NAME=prod-send-email
+  #   command:
+  #     [
+  #       "go",
+  #       "run",
+  #       "main.go"
+  #     ]
+  #   volumes:
+  #     - .:/app
+  #   depends_on:
+  #     - redis
+  #     - db
+  #   networks:
+  #     - default
