add custom error logging

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,4 @@ ENV=dev
 AWS_ACCESS_KEY=abcd
 AWS_SECRET_ACCESS_KEY=abcd
 SQS_URL=https://sqs.ap-south-1.amazonaws.com/1234567890
+SENTRY_DSN=https://1234567890@o1234567890.ingest.sentry.io/1234567890
